--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\MainMenu\Scripts\MenuScript.cs" />
      <Compile Include="Assets\Menu\Scripts\MenuScript.cs" />
   </ItemGroup>
   <ItemGroup>
