--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,9 +47,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\MainMenu\Scripts\MenuScript.cs" />
-     <Compile Include="Assets\Menu\Scripts\MenuScript.cs" />
  <Reference Include="Assembly-UnityScript-firstpass">
- <HintPath>D:/Documents/GitHub/RPG/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
+ <HintPath>E:/Documents/GitHub/RPG/RPG/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
