--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Collider.cs" />
+     <Compile Include="Assets\Important Scripts\BattleScript.cs" />
      <Compile Include="Assets\Important Scripts\EnemyController.cs" />
      <Compile Include="Assets\Important Scripts\GameMasterController.cs" />
      <Compile Include="Assets\Important Scripts\GhostController.cs" />
