--- a/UnityVS.RPG.CSharp.csproj
+++ b/UnityVS.RPG.CSharp.csproj
@@ -15,9 +15,6 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
-    <UnityProjectType>Game:1</UnityProjectType>
-    <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
-    <UnityVersion>4.5.4f1</UnityVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -61,7 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Collider.cs" />
+    <Compile Include="Assets\Important Scripts\AIGhostController.cs" />
+    <Compile Include="Assets\Important Scripts\AiNpcController.cs" />
     <Compile Include="Assets\Important Scripts\BattleScript.cs" />
+    <Compile Include="Assets\Important Scripts\Die.cs" />
     <Compile Include="Assets\Important Scripts\EnemyController.cs" />
     <Compile Include="Assets\Important Scripts\GameMasterController.cs" />
     <Compile Include="Assets\Important Scripts\GhostController.cs" />
@@ -69,13 +69,13 @@
     <Compile Include="Assets\Important Scripts\Inventory.cs" />
     <Compile Include="Assets\Important Scripts\Item.cs" />
     <Compile Include="Assets\Important Scripts\ItemDatabase.cs" />
+    <Compile Include="Assets\Important Scripts\NpcMoveRoll.cs" />
     <Compile Include="Assets\Important Scripts\PlayerController.cs" />
     <Compile Include="Assets\Important Scripts\SpriteAnimation.cs" />
+    <Compile Include="Assets\Important Scripts\Stats.cs" />
     <Compile Include="Assets\MainMenu\Scripts\MenuScript.cs" />
     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\SortingLayerExposed.cs" />
     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TileAnimator.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Assets\Tiled2Unity\Imported\_ReadMe.txt" />
     <None Include="Assets\Tiled2Unity\Imported\hyrule.tiled2unity.xml" />
     <None Include="Assets\Tiled2Unity\Imported\hyrule3.tiled2unity.xml" />
