add mike's battle scene, all npcs and enemies are alive
animation and ai control are working correctly.

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
      <Compile Include="Assets\Collider.cs" />
      <Compile Include="Assets\Important Scripts\AIGhostController.cs" />
+     <Compile Include="Assets\Important Scripts\AiEnemyController.cs" />
+     <Compile Include="Assets\Important Scripts\AiEnemyGhostController.cs" />
      <Compile Include="Assets\Important Scripts\AiNpcController.cs" />
      <Compile Include="Assets\Important Scripts\BattleScript.cs" />
      <Compile Include="Assets\Important Scripts\D20.cs" />
