enemy battle sceen animation working correctly but

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Important Scripts\EnemyDamageAnimation.cs" />
      <Compile Include="Assets\Important Scripts\EnemyShootingAnimation.cs" />
      <Compile Include="Assets\Important Scripts\GameOverGUI.cs" />
+     <Compile Include="Assets\Important Scripts\GameVariables.cs" />
      <Compile Include="Assets\Important Scripts\GhostController.cs" />
      <Compile Include="Assets\Important Scripts\HeroDamageAnimator.cs" />
      <Compile Include="Assets\Important Scripts\HitRoll.cs" />
