--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -39,10 +39,10 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>G:/Unity4_3/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>G:/Unity4_3/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +68,7 @@
      <Compile Include="Assets\Important Scripts\Item.cs" />
      <Compile Include="Assets\Important Scripts\ItemDatabase.cs" />
      <Compile Include="Assets\Important Scripts\NpcMoveRoll.cs" />
+     <Compile Include="Assets\Important Scripts\ObjPersistenceController.cs" />
      <Compile Include="Assets\Important Scripts\PlayerController.cs" />
      <Compile Include="Assets\Important Scripts\ShootingAnimation.cs" />
      <Compile Include="Assets\Important Scripts\SpriteAnimation.cs" />
