--- a/UnityVS.RPG.CSharp.csproj
+++ b/UnityVS.RPG.CSharp.csproj
@@ -7,19 +7,14 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{8F313683-98A3-2BA2-3EC7-6E4C9360C46B}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <AssemblyName>Assembly-CSharp</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
-    <UnityProjectType>Game:1</UnityProjectType>
-    <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
-    <UnityVersion>4.5.4f1</UnityVersion>
+    <CompilerResponseFile></CompilerResponseFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -84,6 +79,7 @@
     <Compile Include="Assets\Important Scripts\Item.cs" />
     <Compile Include="Assets\Important Scripts\ItemDatabase.cs" />
     <Compile Include="Assets\Important Scripts\NpcMoveRoll.cs" />
+    <Compile Include="Assets\Important Scripts\ObjPersistenceController.cs" />
     <Compile Include="Assets\Important Scripts\PlayerController.cs" />
     <Compile Include="Assets\Important Scripts\ShootingAnimation.cs" />
     <Compile Include="Assets\Important Scripts\SpriteAnimation.cs" />
@@ -96,8 +92,6 @@
     <Compile Include="Assets\MainMenu\Scripts\MenuScript.cs" />
     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\SortingLayerExposed.cs" />
     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TileAnimator.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Assets\Tiled2Unity\Imported\_ReadMe.txt" />
     <None Include="Assets\Tiled2Unity\Imported\hyrule.tiled2unity.xml" />
     <None Include="Assets\Tiled2Unity\Imported\hyrule3.tiled2unity.xml" />
